Bug 61656 - broken functionality on Page Layout tab
Summary: broken functionality on Page Layout tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: Other All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0 target:4.0.2
Keywords: regression
Depends on:
Blocks:
 
Reported: 2013-03-01 07:44 UTC by Andras Timar
Modified: 2013-03-02 01:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2013-03-01 07:44:41 UTC
1. Go to File - Print - Page Layout tab
2. Set Pages per sheet to 4
3. Change the Order combo box

Result: the preview image does not change, and LibreOffice always prints the pages in "left to right, then down" order, regardless of the Order setting.

It is a regression, it used to work in 3.6. It may be related to .ui conversion of the dialog.
Comment 1 Not Assigned 2013-03-01 13:35:48 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9c7cf46fbf01f62ea9520c4ba1ec4748fe62b20b

Resolves: fdo#61656 use order and orientation combobox select pos as index



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Caolán McNamara 2013-03-01 16:48:06 UTC
4-0 https://gerrit.libreoffice.org/2490
4-0-1 https://gerrit.libreoffice.org/2495
Comment 3 Not Assigned 2013-03-02 01:57:22 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=569b4ed7a68751edafcca0b79e5c25d2370f96a4&h=libreoffice-4-0

Resolves: fdo#61656 use order and orientation combobox select pos as index


It will be available in LibreOffice 4.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.