Resolves: fdo#61656 use order and orientation combobox select pos as index

not the associated entry data, which isn't set for these simple
1 to 1 position -> data comboboxes

Change-Id: I0c73786bca00684cedc4672d0ad5e61d0c1f9bd7